Reset margin / padding to fix scrollbar
Body height 100vh creates a scrollbar together with a margin/padding. Using overflow to fix this and the container is not 100% in the center.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 html,
 body {
+    margin: 0;
+    padding: 0;
     height: 100vh;
     background: #6441A4;
 }
